--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "This is Namaste React by Nanda kishor palei",
   "scripts": {
-    "start": "npx parcel index.html",
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -18,8 +19,14 @@
   },
   "homepage": "https://github.com/Nandakishorpalei/Namaste-react#readme",
   "devDependencies": {
+    "@eslint/compat": "^1.0.3",
+    "@eslint/js": "^9.4.0",
+    "eslint": "^9.4.0",
+    "eslint-plugin-react": "^7.34.2",
+    "globals": "^15.3.0",
     "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "typescript-eslint": "^7.11.0"
   },
   "dependencies": {
     "react": "^18.3.1",
